# civicproof

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/web/: index.html  package.json
apps/web/src/: App.tsx  domain.ts  mockData.ts  styles.css
proofs/lean/: CivicProof.lean  lake-manifest.json  lakefile.lean
proofs/lean/CivicProof/Policy/: Budget.lean
services/api/: Cargo.toml
services/api/src/: main.rs
