[package]
name = "civicproof-api"
version = "0.1.0"
edition = "2021"
description = "Rust API for CivicProof promise ledgers and claim verification metadata."
license = "MIT"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
